<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp"
        android:id="@+id/MainActivity"
        android:background="@drawable/images"
>

    <TextView
            android:text="@string/data_de_nastere_a_mamei"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:textColor="#ff0074"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.038" app:layout_constraintVertical_bias="0.13"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    <TextView
            android:text="@string/data_de_nastere_a_tatalui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#ff0074"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.025" app:layout_constraintVertical_bias="0.016"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    <Button
            android:text="@string/afla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clAfla" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.028" app:layout_constraintVertical_bias="0.371"/>
    <TextView
            android:text="@string/data_cand_mama_ramane_insarcinata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0074"
            android:textSize="18sp"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.058" app:layout_constraintVertical_bias="0.239"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    <TextView
            android:hint="@string/select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clDateF" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintVertical_bias="0.073" android:textAppearance="@style/TextAppearance.AppCompat"/>
    <TextView
            android:hint="@string/select_date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clDateM" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.084" app:layout_constraintVertical_bias="0.184"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    <TextView
            android:hint="@string/select_date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clDateC" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.084" app:layout_constraintVertical_bias="0.294"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    <TextView
            android:text="@string/apasa_pe_buton_pentru_a_afla_rezultatul"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textColor="#ff0074"
            android:textSize="15sp"
            android:id="@+id/text" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.498" android:textAppearance="@style/TextAppearance.AppCompat"/>
</android.support.constraint.ConstraintLayout>